# get-deployment-info

./: .pre-commit-config.yaml  Dockerfile  README.md  action.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build-docker-image.yml  release.yml  semantic.yml  test.yml  update_pr.yml
get_deployment_info/: entrypoint.sh
