[tool.poetry]
name = "get-deployment-info"
version = "0.3.3"
description = "A Github Action that gets the information required to build and deploy an Octue service."
authors = ["Marcus Lugg <marcus@octue.com>"]
readme = "README.md"
packages = [{include = "get_deployment_info"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
